# taskly

./: .gitignore  README.md  main.py  pyproject.toml
src/core/: agent.py  calendar_link.py  planner.py
src/data/: tasks.json
